--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body.displetpop{
+	width:100%;
+	height:100%;
 	overflow:hidden;
 }
 
@@ -23,14 +25,15 @@ body.displetpop{
 	-moz-opacity: 0.8;
 	opacity:.80;
 	filter: alpha(opacity=80);
-	margin-right: 15px;
-	margin-left: -15px;
 }
 
-#displetpop table.inner{
-	overflow-y: scroll;
+#displetpop table.inner, #displetpop table.inner td{
 	width: 100%;
 	height: 100%;
+}
+
+#displetpop table.inner td{
+	vertical-align: middle;
 }
 
 #displetpop .popup{
